syntax = 'proto3';

package m3uetcpb;

option go_package = './m3uetcpb';

import 'api/m3uetcpb/perspective.proto';

message PlaylistGroup {
    int64 id = 1;
    string name = 2;
    string description = 3;
    Perspective perspective = 4;
    int64 created_at = 101;
    int64 updated_at = 102;
}

message Playlist {
    int64 id = 1;
    string name = 2;
    string description = 3;
    bool open = 4;
    bool active = 5;
    bool transient = 6;
    int64 query_id = 7;
    int64 playlist_group_id = 8;
    int64 duration = 9;
    Perspective perspective = 10;
    int64 created_at = 101;
    int64 updated_at = 102;
}

message PlaylistTrack {
    int64 id = 1;
    int32 position = 2;
    bool dynamic = 3;
    int64 lastplayedfor = 4;
    int64 playlist_id = 5;
    int64 track_id = 6;
    int64 created_at = 101;
    int64 updated_at = 102;
}

enum PlaylistExportFormat {
    PLEF_NONE = 0;
    PLEF_M3U = 1;
    PLEF_PLS = 2;
}
